[gd_scene load_steps=4 format=3 uid="uid://c5xlqpkwrh8yv"]

[ext_resource type="Script" path="res://src/dungeon/Room.gd" id="1_room"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_left"]
size = Vector2(60, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_right"]
size = Vector2(60, 200)

[node name="Room" type="Node2D"]
script = ExtResource("1_room")

[node name="Background" type="ColorRect" parent="."]
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
color = Color(0.25, 0.25, 0.25, 1)

[node name="PuzzleSpawn" type="Marker2D" parent="."]
position = Vector2(0, 0)

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(-700, 0)

[node name="LeftDoor" type="Area2D" parent="."]
position = Vector2(-900, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDoor"]
shape = SubResource("RectangleShape2D_left")

[node name="Sprite2D" type="Sprite2D" parent="LeftDoor"]
modulate = Color(0, 1, 0, 1)
scale = Vector2(0.5, 2)

[node name="RightDoor" type="Area2D" parent="."]
position = Vector2(900, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDoor"]
shape = SubResource("RectangleShape2D_right")

[node name="Sprite2D" type="Sprite2D" parent="RightDoor"]
modulate = Color(1, 0, 0, 1)
scale = Vector2(0.5, 2)

[node name="RoomLabel" type="Label" parent="."]
offset_left = -100.0
offset_top = -500.0
offset_right = 100.0
offset_bottom = -470.0
horizontal_alignment = 1
text = "Room"
